@@ -4,17 +4,17 @@ import jakarta.validation.Valid;
 import learning.demobank_2.constant.AppConstants;
 import learning.demobank_2.exception.ResourceNotFoundException;
 import learning.demobank_2.model.entity.Transaction;
+import learning.demobank_2.model.request.AllTransaction;
 import learning.demobank_2.model.request.ExportTransactionDto;
 import learning.demobank_2.model.request.TransactionRequest;
 import learning.demobank_2.model.request.TransactionSearchDto;
 import learning.demobank_2.repository.TransactionRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 
 
@@ -26,27 +26,94 @@ public class TransactionService {
     private final TransactionRepository transactionRepo;
 
 
-    public Page<Transaction> getAllTransactions(int pageNumber, int pageSize) {
+    public Slice<AllTransaction> getAllTransactions(AllTransaction allTransaction, int pageNumber, int pageSize) {
         log.debug("Fetching transactions - page: {}, size: {}", pageNumber, pageSize);
 
         validatePaginationParameters(pageNumber, pageSize);
 
-        Pageable pageable = PageRequest.of(pageNumber, pageSize);
-        Page<Transaction> transactions = transactionRepo.findAllTransactions(null, null, null, null, null, pageable);
-        log.info("Retrieved {} transactions from page {}", transactions.getNumberOfElements(), pageNumber);
-        return transactions;
-    }
+        if (allTransaction == null) {
+            allTransaction = new AllTransaction();
+        }
+        try {
+            Pageable pageable = PageRequest.of(pageNumber, pageSize);
 
+            Slice<Transaction> transactionPage = transactionRepo.findAllTransactions(
+                    allTransaction.getAmount(),
+                    allTransaction.getBankName(),
+                    allTransaction.getBranchName(),
+                    allTransaction.getTransactionType(),
+                    allTransaction.getSenderName(),
+                    allTransaction.getBeneficiaryName(),
+                    pageable
+            );
+
+//            ---------------------- USING FOR LOOPS WITHOUT BUILDERS ----------------
+            List<AllTransaction> allTransactions = new ArrayList<>();
+
+            for (Transaction transaction : transactionPage.getContent()) {
+                log.info("Retrieved {} transactions from page {}", transaction.getId(), pageNumber);
+                AllTransaction dto = new AllTransaction();
+
+                dto.setAmount(transaction.getAmount());
+                dto.setBankName(transaction.getBankName());
+                dto.setBranchName(transaction.getBranchName());
+                dto.setTransactionType(transaction.getTransactionType());
+                dto.setSenderName(transaction.getSenderName());
+                dto.setBeneficiaryName(transaction.getBeneficiaryName());
+                dto.setCategory(transaction.getCategory());
+
+                allTransactions.add(dto);
+            }
+            log.info("Retrieved {} transactions from page {}", allTransactions.size(), pageNumber);
+            return new SliceImpl<>(allTransactions, pageable, transactionPage.hasNext());
+        } catch (Exception e){
+            log.error("Error logging transaction filters: {}", e.getMessage(), e);
+            throw e;
+        }
+
+
+//              --------------------- USING BUILDERS ----------------
+//                AllTransaction dto = AllTransaction.builder()
+//                    .amount(transaction.getAmount())
+//                    .bankName(transaction.getBankName())
+//                    .branchName(transaction.getBranchName())
+//                    .transactionType(transaction.getTransactionType())
+//                    .senderName(transaction.getSenderName())
+//                    .beneficiaryName(transaction.getBeneficiaryName())
+//                    .category(transaction.getCategory())
+//                    .build();
+//            allTransactions.add(dto);
+//            }
+//            log.info("Retrieved {} transactions from page {}", allTransactions.size(), pageNumber);
+//            return new SliceImpl<>(allTransactions, pageable, transactionPage.hasNext());
+//
+//        } catch (Exception e) {
+//            log.error("Error logging transaction filters: {}", e.getMessage(), e);
+//            throw e;
+//        }
+
+//        ----------------- USING MAPS ----------------
+//        return transactionPage.map(transaction -> {
+//            log.info("Retrieved {} transactions from page {}", transaction.getId(), pageNumber);
+//            return AllTransaction.builder()
+//                    .amount(transaction.getAmount())
+//                    .bankName(transaction.getBankName())
+//                    .branchName(transaction.getBranchName())
+//                    .transactionType(transaction.getTransactionType())
+//                    .senderName(transaction.getSenderName())
+//                    .beneficiaryName(transaction.getBeneficiaryName())
+//                    .category(transaction.getCategory())
+//                    .build();
+//        });
+    }
     public Transaction getTransactionById(int id) {
         log.debug("Fetching transaction with id: {}", id);
-
         return transactionRepo.findById(id)
                 .orElseThrow(() -> {
                     log.error("Transaction not found with id: {}", id);
                     return new ResourceNotFoundException("Transaction", "id", id);
                 });
     }
-
     public TransactionRequest createTransaction(TransactionRequest transactionRequest) {
         try {
             log.debug("Creating new transaction");
@@ -73,22 +140,6 @@ public class TransactionService {
             throw e;
         }
     }
-
-    private TransactionRequest mapToTransactionRequest(Transaction savedTransaction) {
-        return TransactionRequest.builder()
-                .amount(savedTransaction.getAmount())
-                .bankName(savedTransaction.getBankName())
-                .branchName(savedTransaction.getBranchName())
-                .transactionType(savedTransaction.getTransactionType())
-                .debitAccountNumber(savedTransaction.getDebitAccountNumber())
-                .creditAccountNumber(savedTransaction.getCreditAccountNumber())
-                .senderPhoneNumber(savedTransaction.getSenderPhoneNumber())
-                .senderName(savedTransaction.getSenderName())
-                .beneficiaryName(savedTransaction.getBeneficiaryName())
-                .category(savedTransaction.getCategory())
-                .build();
-    }
-
     public Page<TransactionSearchDto> searchTransactions(TransactionSearchDto searchDto, int pageNumber, int pageSize) {
         log.debug("Searching transactions with filters - page: {}, size: {}", pageNumber, pageSize);
 
@@ -114,7 +165,6 @@ public class TransactionService {
                         .build()
         );
     }
-
     private void validatePaginationParameters(int pageNumber, int pageSize) {
         if (pageNumber < 0) {
             log.error("Invalid page number: {}", pageNumber);
@@ -125,7 +175,6 @@ public class TransactionService {
             throw new IllegalArgumentException(AppConstants.INVALID_PAGE_SIZE);
         }
     }
-
     public List<ExportTransactionDto> exportTransactions(ExportTransactionDto exportDto) {
         if (exportDto == null) {
             log.debug("Export DTO is null, fetching all transactions for export");
@@ -149,36 +198,53 @@ public class TransactionService {
                         .beneficiaryName(t.getBeneficiaryName())
                         .category(t.getCategory())
                         .build())
-                .collect(java.util.stream.Collectors.toList());
+                        .toList();
     }
-
     public TransactionRequest updateTransaction(int id, @Valid TransactionRequest request) {
         Transaction existing = transactionRepo.findById(id)
                 .orElseThrow(() -> new RuntimeException("Transaction not found with id: " + id));
-
-        Transaction updated = Transaction.builder()
-                .id(existing.getId())
-                .amount(request.getAmount())
-                .bankName(request.getBankName())
-                .branchName(request.getBranchName())
-                .transactionType(request.getTransactionType())
-                .debitAccountNumber(request.getDebitAccountNumber())
-                .creditAccountNumber(request.getCreditAccountNumber())
-                .senderPhoneNumber(request.getSenderPhoneNumber())
-                .senderName(request.getSenderName())
-                .beneficiaryName(request.getBeneficiaryName())
-                .category(request.getCategory())
-                .build();
-        Transaction savedTransaction = transactionRepo.save(updated);
-        log.info("Transaction updated with id: {}", savedTransaction.getId());
-        return mapToTransactionRequest(savedTransaction);
+        try {
+            Transaction updated = Transaction.builder()
+                    .id(existing.getId())
+                    .amount(request.getAmount())
+                    .bankName(request.getBankName())
+                    .branchName(request.getBranchName())
+                    .transactionType(request.getTransactionType())
+                    .debitAccountNumber(request.getDebitAccountNumber())
+                    .creditAccountNumber(request.getCreditAccountNumber())
+                    .senderPhoneNumber(request.getSenderPhoneNumber())
+                    .senderName(request.getSenderName())
+                    .beneficiaryName(request.getBeneficiaryName())
+                    .category(request.getCategory())
+                    .build();
+            Transaction savedTransaction = transactionRepo.save(updated);
+            log.info("Transaction updated with id: {}", savedTransaction.getId());
+            return mapToTransactionRequest(savedTransaction);
+        }catch (Exception e) {
+            log.error("Error updating transaction: {}", e.getMessage(), e);
+            throw e;
+        }
     }
 
-    public TransactionRequest deleteTransaction(int id) {
+    public void deleteTransaction(int id) {
         Transaction existing = transactionRepo.findById(id)
                 .orElseThrow(() -> new RuntimeException("Transaction not found with id: " + id));
         transactionRepo.delete(existing);
         log.info("Transaction deleted with id: {}", id);
-        return mapToTransactionRequest(existing);
+    }
+
+    private TransactionRequest mapToTransactionRequest(Transaction savedTransaction) {
+        return TransactionRequest.builder()
+                .amount(savedTransaction.getAmount())
+                .bankName(savedTransaction.getBankName())
+                .branchName(savedTransaction.getBranchName())
+                .transactionType(savedTransaction.getTransactionType())
+                .debitAccountNumber(savedTransaction.getDebitAccountNumber())
+                .creditAccountNumber(savedTransaction.getCreditAccountNumber())
+                .senderPhoneNumber(savedTransaction.getSenderPhoneNumber())
+                .senderName(savedTransaction.getSenderName())
+                .beneficiaryName(savedTransaction.getBeneficiaryName())
+                .category(savedTransaction.getCategory())
+                .build();
     }
 }
